--- a/app/views/navigation_pages/cover.html.erb
+++ b/app/views/navigation_pages/cover.html.erb
@@ -15,12 +15,14 @@
             <div class="inner">
               <h3 class="masthead-brand">INC.LINE</h3>
               <nav class="nav nav-masthead">
-                <a class="nav-link" href="\home">Home</a>
-                <a class="nav-link" href="\about">About</a>
-                <a class="nav-link" href="\contact">Contact</a>
+                <a class="nav-link" href="/home">Home</a>
+                <a class="nav-link" href="/about">About</a>
+                <a class="nav-link" href="/contact">Contact</a>
               </nav>
             </div>
           </header>
+          
+          
 
           <main role="main" class="inner cover">
             <%= link_to image_tag("incline-logo.png", alt: "Incline logo") %>
