Edit about and contact page

--- a/app/views/navigation_pages/cover.html.erb
+++ b/app/views/navigation_pages/cover.html.erb
@@ -27,7 +27,7 @@
           <main role="main" class="inner cover">
             <%= link_to image_tag("incline-logo.png", alt: "Incline logo") %>
             <h1 class="cover-subtitle">Reach the Most out of Your Career</h1>
-            <p class="lead">
+            <p class="button">
               <a href="\home" class="btn btn-lg btn-secondary">Find out more</a>
             </p>
           </main>
