--- a/app/views/navigation_pages/home.html.erb
+++ b/app/views/navigation_pages/home.html.erb
@@ -34,7 +34,7 @@
         <div class="jumbotron home">
           <h2 class="display-1">INC.LINE</h2>
           <h4 class="display-4">"Reach the Most Out of Your Career"</h2>
-          <h5 class="lead">Gain the opportunity to learn how to create outstanding CV's that will heighten your competitiveness in the job market.</h5>
+          <h5 class="jumbotron-text">Gain the opportunity to learn how to create outstanding CV's that will heighten your competitiveness in the job market.</h5>
         </div>
 
         <div class="row marketing">
