--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -2,9 +2,13 @@
     font-size: 2.5em;
 }
 
-.jumbotron {
+.home {
     color: white;
     background: url("https://source.unsplash.com/RrJCrlU2yZs") no-repeat scroll 0px 75% / cover transparent;
+}
+
+.jumbotron-text {
+    font-size: 1.2em;
 }
 
 .heading {
@@ -14,7 +18,7 @@
 
 .event {
     text-align: center;
-    border-bottom: 1px solid;
+
 }
 
 .lead {
