--- a/app/views/navigation_pages/about.html.erb
+++ b/app/views/navigation_pages/about.html.erb
@@ -1,3 +1,55 @@
 <% provide(:title, "About") %>
-<h1>NavigationPages#about</h1>
-<p>Find me in app/views/navigation_pages/about.html.erb</p>
+  <head>
+    <link rel="icon" href="/assets/favicon.png"/>
+    <title>INC.LINE | <%= yield(:title) %></title>
+    <%= render 'layouts/rails_default' %>
+    <%= stylesheet_link_tag "about" %>
+    <%= render 'layouts/shim' %>
+  </head>
+  
+  <body>
+    
+    <div class="container">
+      <header class="header clearfix">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-1">
+          <%= link_to image_tag("incline-logo.png", :size => "134x60", :class => "home_logo_image") %>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="/home">Home</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="/about">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/contact">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </header>
+
+      <main role="main">
+
+        <div class="jumbotron about">
+          <h2 class="display-1">ABOUT US</h2>
+        </div>
+
+        <div class="row marketing">
+          <div class="col-lg-12 event">
+            <h1 class="heading">ABOUT PPIA (MUISA) & INCLINE</h1>
+            <p class="about-text">PPIA’s Corporate Relations are proud to present this year’s fresh and brand new concept of event. Our vision is to empower and equip the Indonesian students in their participation of the labor force and our mission is to do so by various relevant activities and seminars. Incline is a seminar developed for this sole purpose of accomplishing our vision.</p>
+            <p class="about-text">As a new event, Incline seeks to smoothen the transition of our students into the labor force as well as informing them of the options available to enhance their professional capacity. One of the main drivers behind Incline’s theme is the growing interest in academics and educational development taking place in Indonesia. Indonesia has been progressively omitting qualified as well as skilled students and human resource. Consequently, our students are continually exposed to the increasing demand for highly qualified workforce. Incline would bring great benefits to students by filling the gap of understanding between specific qualifications and their aspirations in the professional world.</p>
+            <p class="about-text">Incline will be held in the form of an informative seminar and CV clinic (by NCubation from Navanti Group) where the speakers could speak freely and inform students about topics related to their profession and experiences of interest. The sessions will then be concluded with an exclusive time limited Question and Answer session.</p>
+          </div>
+        </div>
+        
+      </main>
+
+      <footer class="container foot">
+        <p>&copy; Melbourne University Indonesian Student Association 2016</p>
+      </footer>
+
+    </div> <!-- /container -->
+  </body>
+
