--- a/app/views/navigation_pages/contact.html.erb
+++ b/app/views/navigation_pages/contact.html.erb
@@ -1,3 +1,52 @@
 <% provide(:title, "Contact") %>
-<h1>NavigationPages#contact</h1>
-<p>Find me in app/views/navigation_pages/contact.html.erb</p>
+  <head>
+    <link rel="icon" href="/assets/favicon.png"/>
+    <title>INC.LINE | <%= yield(:title) %></title>
+    <%= render 'layouts/rails_default' %>
+    <%= stylesheet_link_tag "contact" %>
+    <%= render 'layouts/shim' %>
+  </head>
+  
+  <body>
+    
+    <div class="container">
+      <header class="header clearfix">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-1">
+          <%= link_to image_tag("incline-logo.png", :size => "134x60", :class => "home_logo_image") %>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="/home">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/about">About</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="/contact">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </header>
+
+      <main role="main">
+
+        <div class="jumbotron contact">
+          <h2 class="display-1">CONTACT US</h2>
+        </div>
+
+        <div class="row marketing">
+          
+          
+
+        </div>
+
+      </main>
+
+      <footer class="container foot">
+        <p>&copy; Melbourne University Indonesian Student Association 2016</p>
+      </footer>
+
+    </div> <!-- /container -->
+  </body>
+
