--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -37,7 +37,6 @@
 
 .profile {
     text-align: center;
-    border-bottom: 1px solid;
 }
 
 .description {
@@ -45,6 +44,7 @@
 }
 
 .dateloc {
+    border-top: 1px solid;
     text-align: center;
     font-size: 2em;
 }
