--- a/app/views/navigation_pages/contact.html.erb
+++ b/app/views/navigation_pages/contact.html.erb
@@ -37,6 +37,11 @@
 
         <div class="row marketing">
           
+          <div class="col-lg-12 contact-ppia">
+            <p>For other inquiries, please contact PPIA-UNIMELB: </p>
+            <%= link_to image_tag("ppia-header-new.png"), 'http://ppia-unimelb.org/' %>
+            <p>info@ppia-unimelb.org</p>
+          </div>
           
 
         </div>
